[package]
name = "sf-scrapbook-helper"
version = "0.2.8"
edition = "2024"

[dependencies]
ahash = "0.8"
async-compression = { version = "0.4", features = ["zlib"] }
chrono = "0.4"
clap = { version = "4.5.54", features = ["derive"] }
clap-num = "1.2.0"
fastrand = "2.3"
iced = { version = "0.12", default-features = false, features = [
    "tokio",
    "lazy",
    "image",
    "advanced",
] }
iced_aw = { version = "0.9", default-features = false, features = [
    "number_input",
    "icons",
    "drop_down",
] }
image = { version = "0.25", default-features = false, features = [
    "ico",
    "webp",
] }
indicatif = "0.17.11"
log = "0.4.29"
log4rs = { version = "1.4.0" }
nohash-hasher = "0.2"
num-format = "0.4.4"
open = "5.3"
reqwest = { version = "0.13", features = ["gzip", "deflate"] }
semver = "1.0.27"
serde = "1.0"
serde_json = "1.0"
sf-api = { git = "https://github.com/the-marenga/sf-api.git", version = "0.3.4" }
titlecase = "3.6"
tokio = { version = "1.49", default-features = false, features = ["fs"] }
toml = "0.8"

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1

# Async decompression and iced can become very slow on low opt-levels.
# This adds a bit of compile overhead, but that time gets easily recouped
# from the async decomp, etc speedups
[profile.dev.package."*"]
opt-level = 2

[build-dependencies]
winres = "0.1"
